--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.6",
     "sass": "^1.64.2",
     "vuetify": "^3.3.11"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
