--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "@pinia/nuxt": "^0.4.11",
+    "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "sass": "^1.64.2",
     "vuetify": "^3.3.11"
