--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "@pinia/nuxt": "^0.4.11",
+    "@sidebase/nuxt-auth": "0.5.0",
     "moment": "^2.29.4",
+    "next-auth": "^4.21.1",
     "pinia": "^2.1.6",
     "sass": "^1.64.2",
     "vuetify": "^3.3.11"
