--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../.nuxt/tsconfig.server.json"
+  "extends": "../.nuxt/tsconfig.server.json",
+  "include": [
+    "../.nuxt/types/nitro.d.ts",
+    "../.nuxt/types/auth.d.ts",
+    "../server/**/*"
+  ]
 }
